# desktop-brief

./: .env.example  .gitignore  LICENSE  Makefile  README.md  install.sh  pyproject.toml  uninstall.sh
briefing/: index.html
briefing/css/: jarvis.css
briefing/js/: dashboard.js
docs/: CLAUDE_HOOK_SETUP.md
eww/: eww.scss  eww.yuck
eww/scripts/: health_dots.sh  open_briefing.sh  read_state.sh  ticker_line.sh
gnome/: apply-shortcut.sh  desktop-brief-briefing.desktop  desktop-brief.desktop  install-launcher.sh
hooks/: session_start.sh
src/desktop_brief/: __main__.py  config.py  daemon.py  health.py  notify.py  paths.py  state.py  web_server.py
src/desktop_brief/cli/: daemon_main.py  doctor.py  render_main.py
src/desktop_brief/llm/: client.py  prompts.py
src/desktop_brief/mcp/: thunderbird_client.py
src/desktop_brief/render/: briefing.py
src/desktop_brief/sources/: base.py  calendar_source.py  email_source.py  grants.py  hardware.py  news.py  stocks.py  weather.py
systemd/: desktop-brief.service
tests/: test_render_briefing.py  test_state_atomic.py  test_stocks_market_hours.py
